ConnectionManagerTest WiP